fixed browser compatibality bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,11 @@
     z-index: 100;
 }
 
+.custom-backdrop-blur {
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+}
+
 .morty-cont {
     position: relative;
     width: 100%;
